--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 body{
     background-color: #f4f4f4;
     color: #080808;
@@ -195,4 +198,75 @@ nav ul li a:hover::after {
 .btn:hover {
     background-color: #0088ff;
     transition: 0.5s;
+}
+.contact-left {
+    flex-basis: 35%;
+}
+.contact-right {
+    flex-basis: 60%;
+}
+.contact-left p {
+    margin-top: 30px;
+}
+.contact-left p i {
+    color: #0088ff;
+    margin-right: 15px;
+    font-size: 25px;
+}
+.social-icons {
+    margin-top: 30px;
+}
+.social-icons a {
+    margin-right: 15px;
+    font-size: 30px;
+    text-decoration: none;
+    color: #0088ff;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover {
+    color: navy;
+    transform: translateY(-5px);
+}
+.btn.btn2 {
+    display: inline-block;
+    background: #0088ff;
+}
+.contact-right form {
+    width: 100%;
+}
+form input, form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #FFFFFF;
+    margin: 15px 0;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+form .btn2 {
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.copyright {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #ababab;
+    font-weight: 300;
+    margin-top: 20px;
+}
+.copyright a {
+    color: #080808;
+    text-decoration: none;
+}
+nav .fa-solid {
+    display: none;
+}
+#msg {
+    color: green;
+    margin-top: -50px;
 }
