--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body{
 }
 #header{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    background: url(/images/medium-shot-man-wearing-hat.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     
 }
 .container{
@@ -32,7 +36,7 @@ nav ul li {
 }
 nav ul li a {
     text-decoration: none;
-    color: #080808;
+    color: #0088ff;
     font-size: 18px;
     position: relative;
 }
@@ -50,7 +54,7 @@ nav ul li a:hover::after {
     transition: 0.2s;
 }
 .header-text {
-    margin-top: 20%;
+    margin-top: 15%;
     font-size: 30px;
 }
 .header-text h1 {
@@ -63,7 +67,7 @@ nav ul li a:hover::after {
 }
 #about {
     padding: 80px 0;
-    color: #ababab;
+    /* color: #ababab; */
 }
 .row {
     display: flex;
@@ -81,7 +85,7 @@ nav ul li a:hover::after {
     flex-basis: 60%;
 }
 .sub-title {
-    font-size: 30px;
+    font-size: 40px;
     color: #080808;
     font-weight: 600;
 }
@@ -125,7 +129,7 @@ nav ul li a:hover::after {
 }
 #portfolio {
     padding: 50px 0;
-    color: #ababab;
+    /* color: #ababab; */
 }
 .work-list {
     display: grid;
