--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@
   body {
     background-color: lightblue;
   }
+  #header {
+    background: 100% auto;
+  }
   .header-text {
     margin-top: 100%;
     font-size: 16px;
