--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   #header {
     /* background: 100% auto; */
     background-size: 300px 200px; /* Adjust as needed */
-    background-position: 50px 20px; /* Adjust as needed */
+    background-position: 100% auto; /* Adjust as needed */
   }
   .header-text {
     margin-top: 100%;
