--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   #header {
     /* background: 100% auto; */
     background-size: 720px 1600px; /* Adjust as needed */
-    background-position: 100% auto; /* Adjust as needed */
+    /* background-position: 100% auto; Adjust as needed */
   }
   .header-text {
     margin-top: 100%;
