--- a/index.css
+++ b/index.css
@@ -5,7 +5,12 @@
   }
   #header {
     /* background: 100% auto; */
-    background-size: 720px 1600px; /* Adjust as needed */
+    width: 100%;
+    height: 80vh;
+    background: url(/images/medium-shot-man-wearing-hat.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     /* background-position: 100% auto; Adjust as needed */
   }
   .header-text {
