--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
   #header {
     height: 80vh;
     background-size: contain;
+    background-position: center;
   }
   .header-text {
     margin-top: 100%;
