--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@
   }
   #header {
     height: 80vh;
-    background-size: contain;
+    width: 100%;
+    background-size: cover;
     background-position: center;
   }
   .header-text {
