--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   #header {
     height: 80vh;
     width: 100%;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
   }
   .header-text {
