--- a/index.css
+++ b/index.css
@@ -4,10 +4,7 @@
     background-color: lightblue;
   }
   #header {
-    height: 80vh;
-    width: 100%;
-    background-size: contain;
-    background-position: center;
+    background: none;
   }
   .header-text {
     margin-top: 100%;
