--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 #header{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     background: url(/images/medium-shot-man-wearing-hat.jpg);
     background-size: cover;
     background-position: center;
@@ -37,7 +37,8 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #0088ff;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 500;
     position: relative;
 }
 nav ul li a::after {
@@ -62,6 +63,12 @@ nav ul li a:hover::after {
     color: #080808;
     margin-top: 20px;
 }
+.header-text p {
+    color: #080808;
+    margin-top: 20px;
+    font-size: 40px;
+    font-weight: 500;
+}
 .header-text h1 span {
     color: #0088ff;
 }
@@ -84,17 +91,29 @@ nav ul li a:hover::after {
 .about-col-2 {
     flex-basis: 60%;
 }
-.sub-title {
-    font-size: 40px;
+/* .sub-title {
+    font-size: 30px;
     color: #080808;
-    font-weight: 600;
+    font-weight: 700;
+} */
+.about-col-2 h1 {
+    font-size: 50px;
+    color: #080808;
+    /* margin-top: 20px; */
+}
+.about-col-2 p {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 300;
+    word-spacing: 0.15em;
+    line-height: 1.5;
 }
 .tab-tittles {
     display: flex;
-    margin: 20px 0 40px;
+    margin: 90px 0 50px;
 }
 .tab-links {
-    margin-right: 50px;
+    margin-right: 200px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
@@ -119,7 +138,7 @@ nav ul li a:hover::after {
 }
 .tab-contents ul li span {
     color: #0088ff;
-    font-size: 14px;
+    font-size: 16px;
 }
 .tab-contents {
     display: none;
