update style and set functionality to see more button

--- a/index.css
+++ b/index.css
@@ -8,8 +8,9 @@
     background: none;
   }
   .header-text {
-    margin-top: 30%;
+    margin-top: 15%;
     font-size: 16px;
+    margin-left: 25%;
   }
   .header-text h1 {
     font-size: 30px;
