--- a/index.css
+++ b/index.css
@@ -3,23 +3,28 @@
   body {
     background-color: lightblue;
   }
+
   #header {
     height: 40vh;
     background: none;
   }
+
   .header-text {
     margin-top: 15%;
     font-size: 16px;
     margin-left: 25%;
   }
+
   .header-text h1 {
     font-size: 30px;
     margin-top: 10px;
   }
+
   nav .fa-solid {
     display: block;
     font-size: 25px;
   }
+
   nav ul {
     background: #f4f4f4;
     position: fixed;
@@ -31,35 +36,59 @@
     z-index: 2;
     transition: right 0.5s;
   }
+
   nav ul li {
     display: block;
     margin: 25px;
   }
+
   nav ul .fa-solid {
     position: absolute;
     top: 25px;
     left: 25px;
     cursor: pointer;
   }
+
   .sub-title {
     font-size: 40px;
   }
-  .about-col-1, .about-col-2 {
+
+  .about-col-1,
+  .about-col-2 {
     flex-basis: 100%;
   }
+
   .about-col-1 {
     margin-bottom: 60px;
   }
+
   .about-col-2 {
     font-size: 14px;
   }
+
   .tab-links {
     margin-right: 20px;
     font-size: 16px;
   }
-  .contact-left, .contact-right {
+
+  .work-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+    grid-gap: 40px;
+    margin-top: 50px;
+  }
+
+  .work:nth-child(1),
+  .work:nth-child(2) {
+    display: grid;
+  }
+
+  .contact-left,
+  .contact-right {
     flex-basis: 100%;
   }
+
   .copyright {
     font-size: 14px;
   }
