--- a/index.css
+++ b/index.css
@@ -5,14 +5,14 @@
   }
 
   #header {
-    height: 40vh;
+    /* height: 40vh; */
     background: none;
   }
 
   .header-text {
     margin-top: 15%;
     font-size: 16px;
-    margin-left: 25%;
+    /* margin-left: 25%; */
   }
 
   .header-text h1 {
