--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 #header{
     width: 100%;
-    height: 50vh;
+    /* height: 50vh; */
     /* background: url(/images/medium-shot-man-wearing-hat.jpg);
     background-size: cover;
     background-position: center;
@@ -57,7 +57,7 @@ nav ul li a:hover::after {
 .header-text {
     margin-top: 5%;
     font-size: 30px;
-    margin-left: 25%;
+    /* margin-left: 25%; */
 }
 .header-text h1 {
     font-size: 50px;
